12911
The interpreter does not let me enter a second line anymore. For instance,
```scala
   def f = 
<console>:1: error: illegal start of simple expression
       def f = 
               ^
```
This used to work before. Maybe some change to what happens at the end of file in the Scanner broke it?
